feat: 重新设计首页并现代化 header
- 重新设计首页布局，添加 hero section 和背景图
- 实现 sticky header，滚动时保持固定并添加视觉效果
- 更新文章生成脚本，自动移除开头图片并添加外部链接 target
- 生成项目图标和首页 hero 背景图
- 优化首页显示最新文章和热门标签
- 添加毛玻璃效果和滚动动画

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"generate:tags": "npx tsx scripts/generate-tags-index.ts"
+		"generate:tags": "npx tsx scripts/generate-tags-index.ts",
+		"generate:html": "npx tsx scripts/generate-html.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^7.0.0",
